# otus-argo-workflows

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
config/: model-params.yaml
k8s/: pipeline.yaml
src/: load_data.py  split_data.py  train.py  validate.py
