[project]
name = "otus-argo-workflows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "loguru==0.7.3",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
]

[project.optional-dependencies]
dev = [
    "black==25.11.0", 
    "isort==7.0.0",
    "pre-commit==4.5.0"
]